--- a/Models/Urus.html
+++ b/Models/Urus.html
@@ -4,6 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>URUS</title>
 
  	<!-- Bootstrap CSS -->
@@ -145,7 +146,9 @@
 				</p>
 			</div>
 			<div class="col-md-6">
-				image
+				<div class="parallelogram">
+					<img src="../img/duaa.png" alt="" width="200px" height="100px">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -363,48 +366,18 @@
 
 		<br>
 
-	<!-- <div class="container-fluid" id="defaultOpen">
-    <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
-        <div class="carousel-inner row w-100 mx-auto" role="listbox">
-            <div class="carousel-item col-md-3 active">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400/000/fff?text=1" alt="slide 1">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=2" alt="slide 2">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=3" alt="slide 3">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=4" alt="slide 4">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=5" alt="slide 5">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=6" alt="slide 6">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=7" alt="slide 7">
-            </div>
-            <div class="carousel-item col-md-3">
-                <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=8" alt="slide 8">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left fa-lg text-muted"></i>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next text-faded" href="#carouselExample" role="button" data-slide="next">
-            <i class="fa fa-chevron-right fa-lg text-muted"></i>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-	</div> -->
-
 
 	<div class="gallery js-flickity">
-	  <div class="gallery-cell"></div>
+	  <div class="gallery-cell">
+	  	<h3>asdad</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	  	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	  	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
 	  <div class="gallery-cell"></div>
 	  <div class="gallery-cell"></div>
 	  <div class="gallery-cell"></div>
@@ -415,12 +388,12 @@
 
 		<br>
 
-	<!-- <h2>Parallelogram CSS</h2>
-	<div class="parallelogram">
+	<h2>Parallelogram CSS</h2>
+	<div class="trapezoid">
 		<img src="../img/duaa.png" alt="" width="200px" height="50px">
 	</div>
 
-	<img src="../kkk.png" alt="" height="500px"> -->
+	<img src="../kkk.png" alt="" height="500px">
 
 		<br>
 	
