--- a/History.html
+++ b/History.html
@@ -60,14 +60,14 @@
 	          <a class="dropdown-item test dropdown-toggle" href="#">People<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
 	            <li><a class="dropdown-item" href="Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
-	            <li><a class="dropdown-item" href="#">Marcello Gandhini</a></li>
-	            <li><a class="dropdown-item" href="#">Giampaolo Dallara</a></li>
+	            <li><a class="dropdown-item" href="Brand/Marcello.html">Marcello Gandhini</a></li>
+	            <li><a class="dropdown-item" href="Brand/Giampaollo.html">Giampaollo Dallara</a></li>
 	          </ul>
 	        </li>
 	        <!-- MASTERPIECES -->
-	        <li><a class="dropdown-item" href="#">Masterpieces</a></li>
+	        <li><a class="dropdown-item" href="Brand/Masterpieces.html">Masterpieces</a></li>
 	        <!-- DESIGN -->
-	        <li><a class="dropdown-item" href="#">Design</a></li>
+	        <li><a class="dropdown-item" href="Brand/Design.html">Design</a></li>
 	      </ul>
 	      </li>
 	      
@@ -80,24 +80,24 @@
 	        <li class="dropdown-submenu dropright">
 	          <a class="dropdown-item test dropdown-toggle" href="#">Locators<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="#">Dealer Locator</a></li>
-	            <li><a class="dropdown-item" href="#">Service Locator</a></li>
-	            <li><a class="dropdown-item" href="#">Coullision Center</a></li>
+	            <li><a class="dropdown-item" href="Ownership/Dealer.html">Dealer Locator</a></li>
+	            <li><a class="dropdown-item" href="Ownership/Service.html">Service Locator</a></li>
+	            <li><a class="dropdown-item" href="Ownership/Center.html">Coullision Center</a></li>
 	          </ul>
 	        </li>
 	        <!-- SPAREPART -->
 	        <li><a class="dropdown-item" href="Ownership/Sparepart.html">Sparepart</a></li>
 	        <!-- ACCESSORI ORIGINALI -->
-	        <li><a class="dropdown-item" href="#">Accessori Originali</a></li>
+	        <li><a class="dropdown-item" href="Ownership/Accessori.html">Accessori Originali</a></li>
 	      </ul>
 	      </li>
 
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">HISTORY</a>
+	        <a class="nav-link" href="History.html">HISTORY</a>
 	      </li>
 
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">MOTOSPORT</a>
+	        <a class="nav-link" href="Motorsport/Motorsport.html">MOTOSPORT</a>
 	      </li>
 	    </ul>
 
