--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	    			<button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
 	    			<!-- login -->
-	    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="Login/index.php">Login</a></button>
+	    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="Login/index.html">Login</a></button>
 	  		</form>
 		</div>
 	</nav>
@@ -155,7 +155,11 @@
       		</div>
       		<!-- CARAUSEL 3 -->
       		<div class="carousel-item">
-		        <img src="img/tiggaa.png" class="d-block w-100" alt="...">
+		        <!-- <img src="img/tiggaa.png" class="d-block w-100" alt="..."> -->
+
+		        <video class="video-fluid" autoplay loop muted>
+			        <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
+			      </video>
 		        <div class="carousel-caption d-none d-md-block">
 		          <h5>Third slide label</h5>
 		          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -324,36 +328,48 @@
 	<footer class="footer">
 		<div class="container bottom_border">
 			<div class="row">
-				<div class=" col-md-3">
+				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
 					<ul class="footer_ul_amrc">
-					<li><a href="#">Urus</a></li>
-					<li><a href="#">Hucaran EVO</a></li>
-					<li><a href="#">Huracan RWD</a></li>
-					<li><a href="#">Aventador S</a></li>
-					<li><a href="#">Aventador SVJ</a></li>
+						<li><a href="#">Urus</a></li>
+						<li><a href="Huracan_EVO.html">Huracan EVO</a></li>
+						<li><a href="Huracan_RWD.html">Huracan RWD</a></li>
+						<li><a href="Aventador_S.html">Aventador S</a></li>
+						<li><a href="Aventador_SVJ.html">Aventador SVJ</a></li>
 					</ul>
 				</div>
-				<div class=" col-md-3">
+				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
-					<ul class="footer_ul_amrc">
-						<li><a href="#">Ferruccio Lamborghini</a></li>
-						<li><a href="#">Marcello Gandhini</a></li>
-						<li><a href="#">Giampaolo Dallara</a></li>
-						<li><a href="#">Masterpieces</a></li>
-						<li><a href="#">Design</a></li>
-					</ul>
+						<ul class="footer_ul_amrc">
+							<li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+							<li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+							<li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+							<li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+							<li><a href="../Brand/Design.html">Design</a></li>
+						</ul>
 				</div>
-				<div class=" col-md-3">
+				<div class=" col-md-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Dealer Locator</a></li>
-						<li><a href="#">Service Locator</a></li>
-						<li><a href="#">Coullisin Center</a></li>
-						<li><a href="#">Sparepart</a></li>
-						<li><a href="#">Accessori Originali</a></li>
+						<li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+						<li><a href="../Ownership/Service.html">Service Locator</a></li>
+						<li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+						<li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+						<li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
 					</ul>
-				</div>
+				</div>	
+			</div>
+		</div>
+		<div class="container">
+			<ul class="foote_bottom_ul_amrc">
+			<li><a href="#">Models</a></li>
+			<li><a href="#">Brand</a></li>
+			<li><a href="#">Ownership</a></li>
+			<li><a href="#">Motorsport</a></li>
+			<li><a href="#">History</a></li>
+			</ul>
+			<p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+		</div>
 	</footer>
 
 
