--- a/Motorsport/Motorsport.html
+++ b/Motorsport/Motorsport.html
@@ -19,6 +19,7 @@
     <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+      <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
       <a class="navbar-brand ml-2" href="index.html">
         Lamborghini
       </a>
@@ -63,15 +64,15 @@
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">People<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
-                <li><a class="dropdown-item" href="#">Marcello Gandhini</a></li>
-                <li><a class="dropdown-item" href="#">Giampaolo Dallara</a></li>
+                <li><a class="dropdown-item" href="../Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
+                <li><a class="dropdown-item" href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+                <li><a class="dropdown-item" href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
               </ul>
             </li>
             <!-- MASTERPIECES -->
-            <li><a class="dropdown-item" href="#">Masterpieces</a></li>
+            <li><a class="dropdown-item" href="../Brand/Masterpieces.html">Masterpieces</a></li>
             <!-- DESIGN -->
-            <li><a class="dropdown-item" href="#">Design</a></li>
+            <li><a class="dropdown-item" href="../Brand/Design.html">Design</a></li>
           </ul>
           </li>
           
@@ -84,24 +85,24 @@
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Locators<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Dealer Locator</a></li>
-                <li><a class="dropdown-item" href="#">Service Locator</a></li>
-                <li><a class="dropdown-item" href="#">Coullision Center</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Dealer.html">Dealer Locator</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Service.html">Service Locator</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Center.html">Coullision Center</a></li>
               </ul>
             </li>
             <!-- SPAREPART -->
-            <li><a class="dropdown-item" href="Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a class="dropdown-item" href="../Ownership/Sparepart.html">Sparepart</a></li>
             <!-- ACCESSORI ORIGINALI -->
-            <li><a class="dropdown-item" href="#">Accessori Originali</a></li>
+            <li><a class="dropdown-item" href="../Ownership/Accessori.html">Accessori Originali</a></li>
           </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">HISTORY</a>
+            <a class="nav-link" href="../History.html">HISTORY</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">MOTOSPORT</a>
+            <a class="nav-link" href="../Motorsport/Motorsport.html">MOTOSPORT</a>
           </li>
         </ul>
 
@@ -209,60 +210,38 @@
 
     <footer class="footer">
     <div class="container bottom_border">
-    <div class="row">
-    <div class=" col-md-3">
-    <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
-    <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-      <li><a href="#">Urus</a></li>
-      <li><a href="#">Hucaran EVO</a></li>
-      <li><a href="#">Huracan RWD</a></li>
-      <li><a href="#">Aventador S</a></li>
-      <li><a href="#">Aventador SVJ</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>
-
-    <div class=" col-md-3">
-    <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
-    <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Ferruccio Lamborghini</a></li>
-        <li><a href="#">Marcello Gandhini</a></li>
-        <li><a href="#">Giampaolo Dallara</a></li>
-        <li><a href="#">Masterpieces</a></li>
-        <li><a href="#">Design</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>
-
-    <div class=" col-md-3">
-      <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-      <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Dealer Locator</a></li>
-        <li><a href="#">Service Locator</a></li>
-        <li><a href="#">Coullisin Center</a></li>
-        <li><a href="#">Sparepart</a></li>
-        <li><a href="#">Accessori Originali</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>
-      
-    <div class=" col-md-3">
-      <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-      <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Dealer Locator</a></li>
-        <li><a href="#">Service Locator</a></li>
-        <li><a href="#">Coullisin Center</a></li>
-        <li><a href="#">Sparepart</a></li>
-        <li><a href="#">Accessori Originali</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>  
-
-    </div>
+      <div class="row">
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Models/Urus.html">Urus</a></li>
+            <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+            <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
+            <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
+            <li><a href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
+          </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
+            <ul class="footer_ul_amrc">
+              <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+              <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+              <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+              <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+              <li><a href="../Brand/Design.html">Design</a></li>
+            </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+            <li><a href="../Ownership/Service.html">Service Locator</a></li>
+            <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+            <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+          </ul>
+        </div>  
+      </div>
     </div>
 
 
@@ -277,12 +256,12 @@
     <!--foote_bottom_ul_amrc ends here-->
     <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
 
-    <!-- <ul class="social_footer_ul">
+    <ul class="social_footer_ul">
     <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
     <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
     <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
     <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
-    </ul> -->
+    </ul>
     <!--social_footer_ul ends here-->
     </div>
   </footer>
