--- a/Models/Aventador_S.html
+++ b/Models/Aventador_S.html
@@ -21,6 +21,7 @@
   <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+    <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
     <a class="navbar-brand ml-2" href="../index.html">
       Lamborghini
     </a>
