--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<!-- NAV BAR -->
 	<!-- nav bar LOGO -->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+  	<img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
   	<a class="navbar-brand ml-2" href="index.html">
   		Lamborghini
   	</a>
@@ -71,14 +72,14 @@
 			        <a class="dropdown-item test dropdown-toggle" href="#">People<span class="caret"></span></a>
 			        <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
 			          <li><a class="dropdown-item" href="Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
-			          <li><a class="dropdown-item" href="#">Marcello Gandhini</a></li>
-			          <li><a class="dropdown-item" href="#">Giampaolo Dallara</a></li>
+			          <li><a class="dropdown-item" href="Brand/Marcello.html">Marcello Gandhini</a></li>
+			          <li><a class="dropdown-item" href="Brand/Giampaollo.html">Giampaollo Dallara</a></li>
 			        </ul>
 			      </li>
 			      <!-- MASTERPIECES -->
-			      <li><a class="dropdown-item" href="#">Masterpieces</a></li>
+			      <li><a class="dropdown-item" href="Brand/Masterpieces.html">Masterpieces</a></li>
 			      <!-- DESIGN -->
-			      <li><a class="dropdown-item" href="#">Design</a></li>
+			      <li><a class="dropdown-item" href="Brand/Design.html">Design</a></li>
 			    </ul>
 					</li>
      			
@@ -91,24 +92,24 @@
 			      <li class="dropdown-submenu dropright">
 			        <a class="dropdown-item test dropdown-toggle" href="#">Locators<span class="caret"></span></a>
 			        <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-			          <li><a class="dropdown-item" href="#">Dealer Locator</a></li>
-			          <li><a class="dropdown-item" href="#">Service Locator</a></li>
-			          <li><a class="dropdown-item" href="#">Coullision Center</a></li>
+			          <li><a class="dropdown-item" href="Ownership/Dealer.html">Dealer Locator</a></li>
+			          <li><a class="dropdown-item" href="Ownership/Service.html">Service Locator</a></li>
+			          <li><a class="dropdown-item" href="Ownership/Center.html">Coullision Center</a></li>
 			        </ul>
 						</li>
 						<!-- SPAREPART -->
 			      <li><a class="dropdown-item" href="Ownership/Sparepart.html">Sparepart</a></li>
 			      <!-- ACCESSORI ORIGINALI -->
-			     	<li><a class="dropdown-item" href="#">Accessori Originali</a></li>
+			     	<li><a class="dropdown-item" href="Ownership/Accessori.html">Accessori Originali</a></li>
 			    </ul>
 					</li>
 
     			<li class="nav-item">
-      			<a class="nav-link" href="#">HISTORY</a>
+      			<a class="nav-link" href="History.html">HISTORY</a>
     			</li>
 
     			<li class="nav-item">
-      			<a class="nav-link" href="#">MOTOSPORT</a>
+      			<a class="nav-link" href="Motorsport/Motorsport.html">MOTOSPORT</a>
     			</li>
 	  		</ul>
 
@@ -156,9 +157,8 @@
       		<!-- CARAUSEL 3 -->
       		<div class="carousel-item">
 		        <!-- <img src="img/tiggaa.png" class="d-block w-100" alt="..."> -->
-
-		        <video class="video-fluid" autoplay loop muted>
-			        <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
+		        <video class="video-fluid" autoplay loop muted style="width: 100%;">
+			        <source src="Videos/Lamborghini_Aventador.mp4" type="video/mp4"/>
 			      </video>
 		        <div class="carousel-caption d-none d-md-block">
 		          <h5>Third slide label</h5>
@@ -264,7 +264,7 @@
 				</div>
 			</div>
 			<div  class="col-sm-4" style="height: 200px;">
-				<div class="row hovereffect">	
+				<div class="row hovereffect ">	
 			        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
 			        <div class="overlay">
 			           	<h2>Hover effect 3</h2>
