--- a/History/History.html
+++ b/History/History.html
@@ -4,19 +4,20 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>History</title>
-	<link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer.css">
+  <link rel="stylesheet" type="text/css" href="../css/custom.css">
+	<script src="History.js" type="text/javascript" charset="utf-8" async defer></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 	
 	<!-- NAV BAR -->
 	<!-- nav bar LOGO -->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-	  <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
-	  <a class="navbar-brand ml-2" href="index.html">
+	  <img src="../Lamborghini-logo.png" alt="" width="60px" height="45px">
+	  <a class="navbar-brand ml-2" href="../index.html">
 	    Lamborghini
 	  </a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,21 +34,21 @@
 	      <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
 	        <!-- URUS -->
-	        <li><a class="dropdown-item" href="Models/Urus.html">Urus</a></li>
+	        <li><a class="dropdown-item" href="../Models/Urus.html">Urus</a></li>
 	        <!-- HURACAN -->
 	        <li class="dropdown-submenu dropright">
 	          <a class="dropdown-item test dropdown-toggle" href="#">Huracan<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="Huracan_EVO.html">Huracan EVO</a></li>
-	            <li><a class="dropdown-item" href="Huracan_RWD.html">Huracan RWD</a></li>
+	            <li><a class="dropdown-item" href="../Huracan_EVO.html">Huracan EVO</a></li>
+	            <li><a class="dropdown-item" href="../Huracan_RWD.html">Huracan RWD</a></li>
 	          </ul>
 	        </li>
 	        <!-- AVENTADOR -->
 	        <li class="dropdown-submenu dropright">
 	          <a class="dropdown-item test dropdown-toggle" href="#">Aventador<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="Aventador_S.html">Aventador S</a></li>
-	            <li><a class="dropdown-item" href="Aventador_SVJ.html">Aventador SVJ</a></li>
+	            <li><a class="dropdown-item" href="../Aventador_S.html">Aventador S</a></li>
+	            <li><a class="dropdown-item" href="../Aventador_SVJ.html">Aventador SVJ</a></li>
 	          </ul>
 	      </ul>
 
@@ -60,15 +61,15 @@
 	        <li class="dropdown-submenu dropright">
 	          <a class="dropdown-item test dropdown-toggle" href="#">People<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
-	            <li><a class="dropdown-item" href="Brand/Marcello.html">Marcello Gandhini</a></li>
-	            <li><a class="dropdown-item" href="Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+	            <li><a class="dropdown-item" href="../Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
+	            <li><a class="dropdown-item" href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+	            <li><a class="dropdown-item" href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
 	          </ul>
 	        </li>
 	        <!-- MASTERPIECES -->
-	        <li><a class="dropdown-item" href="Brand/Masterpieces.html">Masterpieces</a></li>
+	        <li><a class="dropdown-item" href="../Brand/Masterpieces.html">Masterpieces</a></li>
 	        <!-- DESIGN -->
-	        <li><a class="dropdown-item" href="Brand/Design.html">Design</a></li>
+	        <li><a class="dropdown-item" href="../Brand/Design.html">Design</a></li>
 	      </ul>
 	      </li>
 	      
@@ -81,15 +82,15 @@
 	        <li class="dropdown-submenu dropright">
 	          <a class="dropdown-item test dropdown-toggle" href="#">Locators<span class="caret"></span></a>
 	          <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-	            <li><a class="dropdown-item" href="Ownership/Dealer.html">Dealer Locator</a></li>
-	            <li><a class="dropdown-item" href="Ownership/Service.html">Service Locator</a></li>
-	            <li><a class="dropdown-item" href="Ownership/Center.html">Coullision Center</a></li>
+	            <li><a class="dropdown-item" href="../Ownership/Dealer.html">Dealer Locator</a></li>
+	            <li><a class="dropdown-item" href="../Ownership/Service.html">Service Locator</a></li>
+	            <li><a class="dropdown-item" href="../Ownership/Center.html">Coullision Center</a></li>
 	          </ul>
 	        </li>
 	        <!-- SPAREPART -->
-	        <li><a class="dropdown-item" href="Ownership/Sparepart.html">Sparepart</a></li>
+	        <li><a class="dropdown-item" href="../Ownership/Sparepart.html">Sparepart</a></li>
 	        <!-- ACCESSORI ORIGINALI -->
-	        <li><a class="dropdown-item" href="Ownership/Accessori.html">Accessori Originali</a></li>
+	        <li><a class="dropdown-item" href="../Ownership/Accessori.html">Accessori Originali</a></li>
 	      </ul>
 	      </li>
 
@@ -98,7 +99,7 @@
 	      </li>
 
 	      <li class="nav-item">
-	        <a class="nav-link" href="Motorsport/Motorsport.html">MOTOSPORT</a>
+	        <a class="nav-link" href="../Motorsport/Motorsport.html">MOTOSPORT</a>
 	      </li>
 	    </ul>
 
@@ -119,24 +120,30 @@
 
 	<div class="row">
 		<div class="col-md-2" style="background: red;">
-			<ol>
-				<li><button type="button" id="ganti" onclick="loadDoc()">Change Content</button></li>
-				<li><a onclick="loadDoce()">Change Content</a></li>
-				<li><a href="#" title="">1963-1964</a></li>
-			</ol>
+			<button onclick="load1()">Change Content</button>
+			<button onclick="load2()">Change Content</button>
+			<button onclick="load3()">Change Content</button>
+			
 		</div>
 		<div class="col-md-9">
-			<div class="row">
+			<div class="row" >
 				<div class="col-md-6" style="background: green;">
 					<!-- <img src="asd" alt=""> -->
 				</div>
-				<div class="col-md-6 demo" style="background: blue;">
-					<p class="sasa ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				<div class="col-md-6" id="demo" style="background: blue;">
+					<p class="sasa" style="overflow-y: scroll; height: 300px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
 				</div>
 			</div>
 			<div 	class="col-md-12" style="background: yellow">
@@ -205,48 +212,25 @@
 
 
 	    <div class="container">
-	    <ul class="foote_bottom_ul_amrc">
-	    <li><a href="#">Models</a></li>
-	    <li><a href="#">Brand</a></li>
-	    <li><a href="#">Ownership</a></li>
-	    <li><a href="#">Motorsport</a></li>
-	    <li><a href="#">History</a></li>
-	    </ul>
-	    <!--foote_bottom_ul_amrc ends here-->
-	    <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+		    <ul class="foote_bottom_ul_amrc">
+		    <li><a href="#">Models</a></li>
+		    <li><a href="#">Brand</a></li>
+		    <li><a href="#">Ownership</a></li>
+		    <li><a href="#">Motorsport</a></li>
+		    <li><a href="#">History</a></li>
+		    </ul>
+		    <!--foote_bottom_ul_amrc ends here-->
+		    <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
 
-	    <!-- <ul class="social_footer_ul">
-	    <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
-	    <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
-	    <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
-	    <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
-	    </ul> -->
-	    <!--social_footer_ul ends here-->
+		    <ul class="social_footer_ul">
+		    <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
+		    <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
+		    <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
+		    <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
+		    </ul>
+		    <!--social_footer_ul ends here-->
 	    </div>
-	  </footer>
-
-
-	<script>
-		function loadDoce() {
-		  var xhttp = new XMLHttpRequest();
-		  xhttp.onreadystatechange = function() {
-		    if (this.readyState == 4 && this.status == 200) {
-		      document.getElementById("demo").innerHTML =
-		      this.responseText;
-		    }
-		  };
-		  xhttp.open("GET", "ajax_info.txt", true);
-		  xhttp.send();
-		}
-	</script>
-	<script>
-		$(document).ready(function(){
-		  $("ganti").click(function(){
-		    $("sasa").text("Hello world!");
-		  });
-		});
-	</script>
-
+	</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
