--- a/Motorsport/Motorsport.html
+++ b/Motorsport/Motorsport.html
@@ -19,8 +19,8 @@
     <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-      <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
-      <a class="navbar-brand ml-2" href="index.html">
+      <img src="../Lamborghini-logo.png" alt="" width="60px" height="45px">
+      <a class="navbar-brand ml-2" href="../index.html">
         Lamborghini
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,21 +37,21 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <!-- URUS -->
-            <li><a class="dropdown-item" href="Models/Urus.html">Urus</a></li>
+            <li><a class="dropdown-item" href="../Models/Urus.html">Urus</a></li>
             <!-- HURACAN -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Huracan<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Huracan_EVO.html">Huracan EVO</a></li>
-                <li><a class="dropdown-item" href="Huracan_RWD.html">Huracan RWD</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
               </ul>
             </li>
             <!-- AVENTADOR -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Aventador<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Aventador_S.html">Aventador S</a></li>
-                <li><a class="dropdown-item" href="Aventador_SVJ.html">Aventador SVJ</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_S.html">Aventador S</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
               </ul>
           </ul>
 
