--- a/Ownership/Sparepart.html
+++ b/Ownership/Sparepart.html
@@ -18,8 +18,8 @@
   <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-      <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
-      <a class="navbar-brand ml-2" href="index.html">
+      <img src="../Lamborghini-logo.png" alt="" width="60px" height="45px">
+      <a class="navbar-brand ml-2" href="../index.html">
         Lamborghini
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,21 +36,21 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <!-- URUS -->
-            <li><a class="dropdown-item" href="Models/Urus.html">Urus</a></li>
+            <li><a class="dropdown-item" href="../Models/Urus.html">Urus</a></li>
             <!-- HURACAN -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Huracan<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Huracan_EVO.html">Huracan EVO</a></li>
-                <li><a class="dropdown-item" href="Huracan_RWD.html">Huracan RWD</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
               </ul>
             </li>
             <!-- AVENTADOR -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Aventador<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Aventador_S.html">Aventador S</a></li>
-                <li><a class="dropdown-item" href="Aventador_SVJ.html">Aventador SVJ</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_S.html">Aventador S</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
               </ul>
           </ul>
 
@@ -63,15 +63,15 @@
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">People<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
-                <li><a class="dropdown-item" href="#">Marcello Gandhini</a></li>
-                <li><a class="dropdown-item" href="#">Giampaolo Dallara</a></li>
+                <li><a class="dropdown-item" href="../Brand/Ferruccio.html">Ferrucio Lamborghini</a></li>
+                <li><a class="dropdown-item" href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+                <li><a class="dropdown-item" href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
               </ul>
             </li>
             <!-- MASTERPIECES -->
-            <li><a class="dropdown-item" href="#">Masterpieces</a></li>
+            <li><a class="dropdown-item" href="../Brand/Masterpieces.html">Masterpieces</a></li>
             <!-- DESIGN -->
-            <li><a class="dropdown-item" href="#">Design</a></li>
+            <li><a class="dropdown-item" href="../Brand/Design.html">Design</a></li>
           </ul>
           </li>
           
@@ -84,24 +84,24 @@
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Locators<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Dealer Locator</a></li>
-                <li><a class="dropdown-item" href="#">Service Locator</a></li>
-                <li><a class="dropdown-item" href="#">Coullision Center</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Dealer.html">Dealer Locator</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Service.html">Service Locator</a></li>
+                <li><a class="dropdown-item" href="../Ownership/Center.html">Coullision Center</a></li>
               </ul>
             </li>
             <!-- SPAREPART -->
-            <li><a class="dropdown-item" href="Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a class="dropdown-item" href="../Ownership/Sparepart.html">Sparepart</a></li>
             <!-- ACCESSORI ORIGINALI -->
-            <li><a class="dropdown-item" href="#">Accessori Originali</a></li>
+            <li><a class="dropdown-item" href="../Ownership/Accessori.html">Accessori Originali</a></li>
           </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">HISTORY</a>
+            <a class="nav-link" href="../History.html">HISTORY</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">MOTOSPORT</a>
+            <a class="nav-link" href="../Motorsport/Motorsport.html">MOTOSPORT</a>
           </li>
         </ul>
 
@@ -115,7 +115,7 @@
             <button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
             <!-- login -->
-            <button class="btn btn-outline-primary my-2 my-sm-0"><a href="Login/LOGIN.html">Login</a></button>
+            <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/LOGIN.html">Login</a></button>
         </form>
       </div>
   </nav>
