--- a/Models/Huracan_RWD.html
+++ b/Models/Huracan_RWD.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" type="text/css" href="../css/custom.css">
   <link rel="stylesheet" type="text/css" href="../css/footer.css">
   <link rel="stylesheet" type="text/css" href="css/custom_models.css">
-  
+  <link rel="stylesheet" type="text/css" href="css/flickity.css">
+  <script src="js/flickity.pkgd.js" type="text/javascript" charset="utf-8" async defer></script>
+
   <script src="js/custom_spek.js" type="text/javascript"></script>
   <script src="js/custom_model.js" type="text/javascript"></script>
 
@@ -122,37 +124,38 @@
     </div>
   </nav> 
 
+  <img src="img/rwd/rwdlayarutama.png" alt="">
+
   <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>OVERVIEW</b></h2>
-        <p>
-          Huracán RWD: the real fun in driving comes when you realize that you are not just driving, but that you are also totally in control of your car in a way that obtains the most exhilarating experience possible from the road, turning driving into a natural endorphin-releasing experience.
-        </p>
-        <p>      	
-					To give you all of this, we decided to go back to basics and embrace the legacy of some of the most exciting rear-wheel-drive cars of all time. That's how, with a perfect balance between agility, steering response and drivability, we turned our most high-tech car into the purest example of a super sports car which is fun to drive.
-        </p>
-        <p>
-        	Here is the Lamborghini Huracán Rear Wheel Drive: pure emotion. Find out all about its performance, features and technical specifications.
-        </p>
+      <p>
+        Huracán RWD: the real fun in driving comes when you realize that you are not just driving, but that you are also totally in control of your car in a way that obtains the most exhilarating experience possible from the road, turning driving into a natural endorphin-releasing experience.
+      </p>
+      <p>       
+        To give you all of this, we decided to go back to basics and embrace the legacy of some of the most exciting rear-wheel-drive cars of all time. That's how, with a perfect balance between agility, steering response and drivability, we turned our most high-tech car into the purest example of a super sports car which is fun to drive.
+      </p>
+      <p>
+        Here is the Lamborghini Huracán Rear Wheel Drive: pure emotion. Find out all about its performance, features and technical specifications.
+      </p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="img/rwd/rwd1.png" alt="" width="" align="right">
     </div>
   </div>
 
-  <br>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
+
+  <div class="row">
+    <div class="col-md-6">
+      <img src="img/rwd/rwd2.png" alt="" width="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>EMOTION</b></h2>
-        <p>
+        <p style="font-size: 16px">
           The ANIMA system (Adaptive Network Intelligence MAnagement) technology allows you to adjust the behavior of the Huracán RWD to your driving needs.
         </p>
         <p>
@@ -163,30 +166,30 @@
   </div>
 
     <br>
+      
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
+  <div civ class="row">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>EXTERIOR </b>DESIGN</h2>
         <p>
           Utmost attention was paid to the design and exterior of the Lamborghini Huracán Rear Wheel Drive. When a car is created to provide a pure “fun-to-drive” experience, every line and detail must be designed to cut through the air and take the driver's breath away.
         </p>
         <p>
-        	This model features new front and rear bumpers, exhaust pipes, rear grills and 19" Kari rims, which make its lines more aggressive than ever.
+          This model features new front and rear bumpers, exhaust pipes, rear grills and 19" Kari rims, which make its lines more aggressive than ever.
         </p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="img/rwd/rwd3.png" alt="" width="" align="right">
     </div>
   </div>
 
   <br>
 
-  <div class="container">
     <div class="row">
       <div class="col-md-6">
-        image
+        <img src="img/rwd/rwd4.png" alt="" width="" align="left">
       </div>
       <div class="col-md-6">
         <h2><b>INTERIOR</b></h2>
@@ -195,7 +198,6 @@
         </p>
       </div>
     </div>
-  </div>
 
   <div class="container">
     <h2><b>DRIVING</b> DYNAMICS</h2>
@@ -204,18 +206,38 @@
     </p>
   </div>
   <br>
-  <div class="container-fluid">
-    <div class="row" style="height: 100px;">
-      <div class="col-md-3" style="background: red">
-        img
-      </div>
-      <div class="col-md-9" style="background: blue">
-        img
-      </div>
+
+  <img src="img/rwd/rwd5- 1128x400.png" alt="">
+  <br>
+
+  <div class="gallery js-flickity">
+    <div class="gallery-cell">
+      <h3>ENGINE & TRANSMISSION</h3>
+      <img src="../img/1.jpg" alt="">
+      <p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>SAFETY & ASSISTANCE SYSTEM</h3>
+      <img src="../img/1.jpg" alt="">
+      <p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>ANIMA</h3>
+      <img src="../img/1.jpg" alt="">
+      <p style="overflow: scroll; height: 300px;">What really makes Urus a true Lamborghini is the electronic platform that controls the systems and radically transforms its dynamic behavior, taking the driver experience to another level. The ANIMA Selector is the secret of Lamborghini driving dynamics, the key command to choose the desired setup. The vehicle adapts according to the driving mode selected. There are three on-road modes: STRADA for easiness of driving, comfort and safety; SPORT for agility, responsiveness and fun to drive; CORSA for precision and maximum performance. The three off-road modes enhance the Urus performance even more: NEVE ensures ease and safety even on slippery surfaces; TERRA ensures comfort and ease in off-road conditions; SABBIA is perfect for sandy surfaces. Finally, the EGO mode enables the driver to redefine the vehicle’s dynamics according to preferences and needs in terms of steering, suspension and traction.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>TECHNOLOGY & INFOTAINMENT</h3>
+      <img src="../img/1.jpg" alt="">
+      <p style="overflow: scroll; height: 300px;">Lamborghini Infotainment System III (LIS III) provides astonishing technological comfort including two intuitive touchscreens with haptic feedback, interactive voice commands and a total of three innovative high-definition displays. In the cockpit, their representations and icons change according to each driving mode selection. A high quality of usability is also guaranteed by an up-to-date multi-connection concept, which improves safety and entertainment.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>DRIVETRAIN & CHASSIS</h3>
+      <img src="../img/1.jpg" alt="">
+      <p style="overflow: scroll; height: 300px;">Urus is equipped with state-of-the-art of vehicle dynamics technology and features excellent adaptive technologies for every situation and road condition: 4-wheel drive system with active rear torque vectoring, 4-wheel steering, adaptive air suspension, electromechanical active roll stabilization system with continuous and immediate response and CCB (Carbon Ceramic Brakes), offering the best braking performance in the SUV segment. This unique technical package is fully managed by the ANIMA Selector and gives Urus the outstanding driving dynamics and handling of a pure Lamborghini.</p>
     </div>
   </div>
-  <br>
-  custom carosel
+  
   <br>
 
   <!-- SPECIFICATION -->
