--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					</li>
 
     			<li class="nav-item">
-      			<a class="nav-link" href="History.html">HISTORY</a>
+      			<a class="nav-link" href="History/History.html">HISTORY</a>
     			</li>
 
     			<li class="nav-item">
