--- a/Models/Huracan_RWD.html
+++ b/Models/Huracan_RWD.html
@@ -23,7 +23,7 @@
   <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-    <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
+    <img src="../Lamborghini-logo.png" alt="" width="60px" height="45px">
     <a class="navbar-brand ml-2" href="../index.html">
       Lamborghini
     </a>
@@ -102,7 +102,7 @@
         </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="../History.html">HISTORY</a>
+            <a class="nav-link" href="../History/History.html">HISTORY</a>
           </li>
 
           <li class="nav-item">
@@ -119,7 +119,7 @@
           <button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
           <!-- login -->
-          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/LOGIN.html">Login</a></button>
+          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
         </form>
     </div>
   </nav> 
@@ -187,17 +187,17 @@
 
   <br>
 
-    <div class="row">
-      <div class="col-md-6">
-        <img src="img/rwd/rwd4.png" alt="" width="" align="left">
-      </div>
-      <div class="col-md-6">
-        <h2><b>INTERIOR</b></h2>
-        <p>
-          The interior of the Huracán RWD offer countless combinations of colors and finishes, as well as a state-of-the-art infotainment system: all the comfort that you'll need to dominate the road, one bend at a time. Form has never followed function so perfectly.        
-        </p>
-      </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="img/rwd/rwd4.png" alt="" width="" align="left">
     </div>
+    <div class="col-md-6">
+      <h2><b>INTERIOR</b></h2>
+      <p>
+        The interior of the Huracán RWD offer countless combinations of colors and finishes, as well as a state-of-the-art infotainment system: all the comfort that you'll need to dominate the road, one bend at a time. Form has never followed function so perfectly.        
+      </p>
+    </div>
+  </div>
 
   <div class="container">
     <h2><b>DRIVING</b> DYNAMICS</h2>
