--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			      <li class="dropdown-submenu dropright">
 			        <a class="dropdown-item test dropdown-toggle" href="#">Aventador<span class="caret"></span></a>
 			        <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-			          <li><a class="dropdown-item" href="Aventador_S.html">Aventador S</a></li>
-			          <li><a class="dropdown-item" href="Aventador_SVJ.html">Aventador SVJ</a></li>
+			          <li><a class="dropdown-item" href="Models/Aventador_S.html">Aventador S</a></li>
+			          <li><a class="dropdown-item" href="Models/Aventador_SVJ.html">Aventador SVJ</a></li>
 			        </ul>
 			    </ul>
 
@@ -123,7 +123,7 @@
 	    			<button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
 	    			<!-- login -->
-	    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="Login/index.html">Login</a></button>
+	    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="Login/index.php">Login</a></button>
 	  		</form>
 		</div>
 	</nav>
