--- a/Login/LOGIN.html
+++ b/Login/LOGIN.html
@@ -11,8 +11,7 @@
 		<input type="text" name="username" id="username" placeholder="Username">
 		<input type="password" name="password" placeholder="password">
 		<input type="submit" name="submit" value="Login">
-		<a href="#">
-Create a new account</a>
+		<a href="#">Create a new account</a>
 	</form>
 
 </body>
