--- a/Models/Huracan_EVO.html
+++ b/Models/Huracan_EVO.html
@@ -21,7 +21,7 @@
   <!-- NAV BAR -->
   <!-- nav bar LOGO -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-    <img src="Lamborghini-logo.png" alt="" width="60px" height="45px">
+    <img src="../Lamborghini-logo.png" alt="" width="60px" height="45px">
     <a class="navbar-brand ml-2" href="../index.html">
       Lamborghini
     </a>
@@ -100,7 +100,7 @@
         </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="../History.html">HISTORY</a>
+            <a class="nav-link" href="../History/History.html">HISTORY</a>
           </li>
 
           <li class="nav-item">
@@ -117,7 +117,7 @@
           <button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
           <!-- login -->
-          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/LOGIN.html">Login</a></button>
+          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
         </form>
     </div>
   </nav> 
