--- a/Models/Urus.html
+++ b/Models/Urus.html
@@ -110,7 +110,7 @@
 
 				<!-- History -->
   			<li class="nav-item">
-    			<a class="nav-link" href="../History.html">HISTORY</a>
+    			<a class="nav-link" href="../History/History.html">HISTORY</a>
   			</li>
 
   			<!-- Motorsport -->
@@ -129,7 +129,7 @@
     			<button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
     			<!-- login -->
-    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="..Login/LOGIN.html">Login</a></button>
+    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="..Login/index.php">Login</a></button>
   		</form>
 		</div>
 	</nav>
@@ -147,9 +147,7 @@
 				</p>
 			</div>
 			<div class="col-md-6">
-				<div class="parallelogram">
-					<img src="../img/duaa.png" alt="" width="200px" height="100px">
-				</div>
+				<img src="../img/duaa.png" alt="" width="200px" height="100px">
 			</div>
 		</div>
 	</div>
@@ -297,7 +295,35 @@
 	</div>
 
 	<br><br>
-
+	
+	<div class="gallery js-flickity">
+	  <div class="gallery-cell">
+	  	<h3>ENGINE & TRANSMISSION</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+	  </div>
+	  <div class="gallery-cell">
+	  	<h3>SAFETY & ASSISTANCE SYSTEM</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+	  </div>
+	  <div class="gallery-cell">
+	  	<h3>ANIMA</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p style="overflow: scroll; height: 300px;">What really makes Urus a true Lamborghini is the electronic platform that controls the systems and radically transforms its dynamic behavior, taking the driver experience to another level. The ANIMA Selector is the secret of Lamborghini driving dynamics, the key command to choose the desired setup. The vehicle adapts according to the driving mode selected. There are three on-road modes: STRADA for easiness of driving, comfort and safety; SPORT for agility, responsiveness and fun to drive; CORSA for precision and maximum performance. The three off-road modes enhance the Urus performance even more: NEVE ensures ease and safety even on slippery surfaces; TERRA ensures comfort and ease in off-road conditions; SABBIA is perfect for sandy surfaces. Finally, the EGO mode enables the driver to redefine the vehicle’s dynamics according to preferences and needs in terms of steering, suspension and traction.</p>
+	  </div>
+	  <div class="gallery-cell">
+	  	<h3>TECHNOLOGY & INFOTAINMENT</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p style="overflow: scroll; height: 300px;">Lamborghini Infotainment System III (LIS III) provides astonishing technological comfort including two intuitive touchscreens with haptic feedback, interactive voice commands and a total of three innovative high-definition displays. In the cockpit, their representations and icons change according to each driving mode selection. A high quality of usability is also guaranteed by an up-to-date multi-connection concept, which improves safety and entertainment.</p>
+	  </div>
+	  <div class="gallery-cell">
+	  	<h3>DRIVETRAIN & CHASSIS</h3>
+	  	<img src="../img/1.jpg" alt="">
+	  	<p style="overflow: scroll; height: 300px;">Urus is equipped with state-of-the-art of vehicle dynamics technology and features excellent adaptive technologies for every situation and road condition: 4-wheel drive system with active rear torque vectoring, 4-wheel steering, adaptive air suspension, electromechanical active roll stabilization system with continuous and immediate response and CCB (Carbon Ceramic Brakes), offering the best braking performance in the SUV segment. This unique technical package is fully managed by the ANIMA Selector and gives Urus the outstanding driving dynamics and handling of a pure Lamborghini.</p>
+	  </div>
+	</div>
+		<br><br>
 
 	<!-- Gallery -->
 	<div class="row">
@@ -365,36 +391,6 @@
 		</div>
 	</div>
 
-		<br>
-
-
-	<div class="gallery js-flickity">
-	  <div class="gallery-cell">
-	  	<h3>ENGINE & TRANSMISSION</h3>
-	  	<img src="../img/1.jpg" alt="">
-	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
-	  </div>
-	  <div class="gallery-cell">
-	  	<h3>SAFETY & ASSISTANCE SYSTEM</h3>
-	  	<img src="../img/1.jpg" alt="">
-	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
-	  </div>
-	  <div class="gallery-cell">
-	  	<h3>ANIMA</h3>
-	  	<img src="../img/1.jpg" alt="">
-	  	<p style="overflow: scroll; height: 300px;">What really makes Urus a true Lamborghini is the electronic platform that controls the systems and radically transforms its dynamic behavior, taking the driver experience to another level. The ANIMA Selector is the secret of Lamborghini driving dynamics, the key command to choose the desired setup. The vehicle adapts according to the driving mode selected. There are three on-road modes: STRADA for easiness of driving, comfort and safety; SPORT for agility, responsiveness and fun to drive; CORSA for precision and maximum performance. The three off-road modes enhance the Urus performance even more: NEVE ensures ease and safety even on slippery surfaces; TERRA ensures comfort and ease in off-road conditions; SABBIA is perfect for sandy surfaces. Finally, the EGO mode enables the driver to redefine the vehicle’s dynamics according to preferences and needs in terms of steering, suspension and traction.</p>
-	  </div>
-	  <div class="gallery-cell">
-	  	<h3>TECHNOLOGY & INFOTAINMENT</h3>
-	  	<img src="../img/1.jpg" alt="">
-	  	<p style="overflow: scroll; height: 300px;">Lamborghini Infotainment System III (LIS III) provides astonishing technological comfort including two intuitive touchscreens with haptic feedback, interactive voice commands and a total of three innovative high-definition displays. In the cockpit, their representations and icons change according to each driving mode selection. A high quality of usability is also guaranteed by an up-to-date multi-connection concept, which improves safety and entertainment.</p>
-	  </div>
-	  <div class="gallery-cell">
-	  	<h3>DRIVETRAIN & CHASSIS</h3>
-	  	<img src="../img/1.jpg" alt="">
-	  	<p style="overflow: scroll; height: 300px;">Urus is equipped with state-of-the-art of vehicle dynamics technology and features excellent adaptive technologies for every situation and road condition: 4-wheel drive system with active rear torque vectoring, 4-wheel steering, adaptive air suspension, electromechanical active roll stabilization system with continuous and immediate response and CCB (Carbon Ceramic Brakes), offering the best braking performance in the SUV segment. This unique technical package is fully managed by the ANIMA Selector and gives Urus the outstanding driving dynamics and handling of a pure Lamborghini.</p>
-	  </div>
-	</div>
 		<br>
 
 <!-- 	<h2>Parallelogram CSS</h2>
