--- a/Ownership/Sparepart.html
+++ b/Ownership/Sparepart.html
@@ -97,7 +97,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="../History.html">HISTORY</a>
+            <a class="nav-link" href="../History/History.html">HISTORY</a>
           </li>
 
           <li class="nav-item">
@@ -115,7 +115,7 @@
             <button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
             <!-- login -->
-            <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/LOGIN.html">Login</a></button>
+            <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
         </form>
       </div>
   </nav>
